lstmメモリ足りない

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
   <footer id="footer" class="footer">
      <div class="container">
        <div class="content has-text-centered">
-         2018 @ksk6348
+         Copyright 2018 ksk6348.
        </div>
      </div>
   </footer>
